--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "did-transports-ms",
   "version": "0.0.0",
   "private": true,
+  "main": "dist/app.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
     "start": "node ./bin/www",
     "test": "jest"
   },
@@ -12,12 +16,22 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11",
     "uport-transports": "^0.2.6"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.2",
+    "@types/http-errors": "^1.6.2",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.12.5",
+    "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
-    "supertest": "^4.0.2"
+    "ts-jest": "24.1.0",
+    "supertest": "^4.0.2",
+    "tslint": "^6.0.0-beta0",
+    "typescript": "^3.6.4",
+    "@types/jest": "^24.0.21"
   },
   "jest": {
     "testEnvironment": "node",
