--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/http-errors": "^1.6.2",
+    "@types/jest": "^24.0.21",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.5",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
-    "ts-jest": "24.1.0",
+    "jsdoc": "^3.6.3",
     "supertest": "^4.0.2",
+    "ts-jest": "24.1.0",
     "tslint": "^6.0.0-beta0",
+    "typedoc": "^0.15.0",
     "typescript": "^3.6.4",
-    "@types/jest": "^24.0.21"
+    "uport-credentials": "^1.2.3"
   },
   "jest": {
     "testEnvironment": "node",
